--- a/ProductsColdCompr.html
+++ b/ProductsColdCompr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Regenerative</title>
+    <title>ProductCold</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -154,90 +154,89 @@
 
 <!--  header section start -->
 <div id="showen">
-    <!-- main-header:START -->
-<section class="top-main-area">
-    <div class="container-fluid hero-img" >
-        <div class="container custom-container header-area">
-            <div class="col-sm-2 logo-one">
-                <img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="134px" height="58px">
-                <div class="left-list-top">
-                    <ul class="h-list">
-                        <li><a href="#">evidence</a></li>
-                        <li><a href="#">education</a></li>
-                        <li><a href="#">partnership</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-10 text-container">
-                <h4>PRODUCTS</h4>
-                <div class="text-center menumain">
-                    <div class="icons-one">
-                        <div class="magnifier"><a href="javascript:void(0)"><img src="assets/magnifier.png"></a></div>
-                        <div class="person"><a href="javascript:void(0)"><img src="assets/person-icon.png"></a></div>
-                        <div class="chaticon"><a href="javascript:void(0)"><img src="assets/chaticon.png"></a></div>
-                        <div class="telephone"><a href="javascript:void(0)"><img src="assets/telephone-icon.png"></a></div>
-                        <div class="globe"><a href="javascript:void(0)"><img src="assets/globe-iocn.png"></a></div>
+    <!--main-header: START-->
+    <section class="top-main-area">
+        <div class="container-fluid hero-img" >
+            <div class="container custom-container header-area">
+                <div class="col-sm-2 logo-one">
+                    <img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="134px" height="58px">
+                    <div class="left-list-top">
+                        <ul class="h-list">
+                            <li><a href="#">evidence</a></li>
+                            <li><a href="#">education</a></li>
+                            <li><a href="#">partnership</a></li>
+                        </ul>
                     </div>
-                    <div class="caption-icons-1" style="display:none;">
-                        <div class="search-nav magnifier">
-                            <input type="text" placeholder="TYPE SEARCH">
-                            <img src="assets/magnifier-red.png">
+                </div>
+                <div class="col-sm-10 text-container">
+                    <h4>PRODUCTS</h4>
+                    <div class="text-center menumain">
+                        <div class="icons-one">
+                            <div class="magnifier"><a href="javascript:void(0)"><img src="assets/magnifier.png"></a></div>
+                            <div class="person"><a href="javascript:void(0)"><img src="assets/person-icon.png"></a></div>
+                            <div class="chaticon"><a href="javascript:void(0)"><img src="assets/chaticon.png"></a></div>
+                            <div class="telephone"><a href="javascript:void(0)"><img src="assets/telephone-icon.png"></a></div>
+                            <div class="globe"><a href="javascript:void(0)"><img src="assets/globe-iocn.png"></a></div>
                         </div>
-                        <a href="/litecure/dashboard.html">
-                            <div class="search-nav person">
-                                <p>MY ACCOUNT</p>
-                                <img src="assets/person-icon-red.png">
+                        <div class="caption-icons-1" style="display:none;">
+                            <div class="search-nav magnifier">
+                                <input type="text" placeholder="TYPE SEARCH">
+                                <img src="assets/magnifier-red.png">
                             </div>
-                        </a>
-                        <div class="search-nav chaticon">
-                            <p>LIVE CHAT</p>
-                            <img src="assets/chaticon-red.png">
+                            <a href="/litecure/dashboard.html">
+                                <div class="search-nav person">
+                                    <p>MY ACCOUNT</p>
+                                    <img src="assets/person-icon-red.png">
+                                </div>
+                            </a>
+                            <div class="search-nav chaticon">
+                                <p>LIVE CHAT</p>
+                                <img src="assets/chaticon-red.png">
+                            </div>
+                            <div class="search-nav telephone">
+                                <p>CALL US</p>
+                                <img src="assets/telephone-icon-red.png">
+                            </div>
+                            <div class="search-nav globe">
+                                <p>FR &nbsp; DE &nbsp; ES</p>
+                                <img src="assets/globe-iocn-red.png">
+                            </div>
                         </div>
-                        <div class="search-nav telephone">
-                            <p>CALL US</p>
-                            <img src="assets/telephone-icon-red.png">
-                        </div>
-                        <div class="search-nav globe">
-                            <p>FR &nbsp; DE &nbsp; ES</p>
-                            <img src="assets/globe-iocn-red.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="container computer-div">
+                <div class="computer-img">
+                    <img src="assets/computer.png">
+                </div>
+            </div>
+
+            <div class="container computer-div">
+                <div class="row">
+                    <div class="col-sm-6 list-home">
+                        <ul>
+                            <li><a href="#" class="color">companion products</a></li>
+                            <li><a href="#">companion animal health</a></li>
+                            <li><a href="#">employment</a></li>
+                            <li><a href="#">blog</a></li>
+                            <li><a href="#">support</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="logo-header-div">
+
+                            <p class="txt">Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container computer-div">
-            <div class="computer-img">
-                <img src="assets/computer.png">
-            </div>
-        </div>
 
-        <div class="container computer-div">
-            <div class="row">
-                <div class="col-sm-6 list-home">
-                    <ul>
-                        <li><a href="#" class="color">companion products</a></li>
-                        <li><a href="#">companion animal health</a></li>
-                        <li><a href="#">employment</a></li>
-                        <li><a href="#">blog</a></li>
-                        <li><a href="#">support</a></li>
-
-                    </ul>
-                </div>
-                <div class="col-sm-6">
-                    <div class="logo-header-div">
-
-                        <p class="txt">Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</section>
-    <!-- main-header:END -->
-
+    </section>
+    <!--main-header: END-->
 
 <!--empty-div:START-->
 <section class=" empty-div">
@@ -245,7 +244,7 @@
 </section>
     <!--empty-div:END-->
 
-    <!-- product-section:START-->
+    <!-- product-section: START -->
 <section>
     <div class="flex-container">
         <div class="container custom-container main-product">
@@ -260,8 +259,8 @@
             </div>
             <div class=" product-link extra-rehab">
                 <a href="/litecure/productphotobio.html">Photobiomodulation <i class="fa fa-close"></i></a>
-                <a href="/litecure/productregen.html" class="active">Regenerative <i class="fa fa-close"></i></a>
-                <a href="/litecure/producthydro.html"  >Hydrotherapy <i class="fa fa-close"></i></a>
+                <a href="/litecure/productregen.html" >Regenerative <i class="fa fa-close"></i></a>
+                <a href="/litecure/producthydro.html" class="active" >Hydrotherapy <i class="fa fa-close"></i></a>
                 <a href="/litecure/productrehab.html"  >Rehabilitation <i class="fa fa-close"></i></a>
                 <a href="/litecure/diagnostics.html">Diagnostics <i class="fa fa-close"></i></a>
                 <a href="/litecure/productCold.html">Cold Compression <i class="fa fa-close"></i></a>
@@ -269,16 +268,15 @@
         </div>
     </div>
 </section>
-    <!-- product-section:END-->
+    <!-- product-section: END -->
 
-<!-- product-image-section: START-->
+<!--product-image-section: START -->
 <section class=" product-image">
-
     <div class="header-div"></div>
     <div class="secondry-container" >
         <div class="wrapper-names">
             <div class=" col-sm-6 text-header">
-                <p class="text-special"><span>PurePRP</span>(Platelete Rich Plasma) Kit</p>
+                <p class="text"><span>Cold</span>Compression Wrap</span></p>
                 <div class="text-container-secondry">
                     <p>MORE DETAILS</p>
                     <div class="circle"><i class="fa fa-chevron-right"></i></div>
@@ -288,19 +286,18 @@
     </div>
     <div class="product-content">
         <div class="wrapper-list">
-            <div class=" col-sm-6 machinertx-image">
-                <img src="assets/machinertx.png" alt="">
+            <div class=" col-sm-6 futhur-third-image ">
+                <img src="assets/companion.png" alt="">
             </div>
             <div class=" col-sm-6 list-main ">
                 <div class="list-div">
-                    <ul class="list-photobio crazy-left">
+                    <ul class="list-photobio">
                         <li><span>Spec:</span><span>Type 01</span></li>
                         <li><span>Spec 02:</span><span>980 / 810 nm</span></li>
                         <li><span>Power:</span><span>0.5W - 15W</span></li>
                         <li><span>Modes:</span><span>Multi</span></li>
                         <li><span>Spec:</span><span>650 nm</span></li>
-                        <li><span>Modes:</span><span>Multi</span></li>
-                        <li><span>Spec:</span><span>650 nm</span></li>
+
                     </ul>
                 </div>
                 <div class="text-div">
@@ -315,9 +312,11 @@
     </div>
 
 </section>
-    <!-- product-image-section: END-->
+    <!--product-image0section: END -->
 
-<!-- schedule a demo:START -->
+
+
+<!-- schedule a demo: START -->
 <section class="schedule-demo">
     <div class="container custom-container schedule-demo-content">
         <div class="icons-share">
@@ -347,10 +346,10 @@
         </div>
     </div>
 </section>
-<!-- schedule a demo:END -->
+<!-- schedule a demo: END -->
 
-    <!--  litecure-video-demo:START -->
-    <section class="litecure-video-demo">
+    <!-- litecure-video-demo: START -->
+<section class="litecure-video-demo">
     <div class="container custom-container schedule-demo-content">
         <div class="icons-share">
             <div class="icons">
@@ -379,9 +378,9 @@
         </div>
     </div>
 </section>
-    <!--  litecure-video-demo:END-->
+    <!-- litecure-video-demo: END -->
 
-    <!-- live-education: START-->
+    <!-- live-education: START -->
 <section class="live-education">
     <div class="container custom-container container-4">
         <div class="header">
@@ -389,6 +388,8 @@
                 <div class="course-text"><p>Related Case Studies</p></div>
                 <div class="course-text1"><p>View all <p><div><i class="fa fa-chevron-right" ></i></div></div>
             </div>
+
+
             <div class="col-md-2 image  p-0 ">
                 <div class="card ">
                     <div class="icons">
@@ -520,11 +521,11 @@
     </div>
 
 </section>
-    <!-- live-education: END-->
+    <!-- live-education: END -->
 
-    <!--qoutation-section:START-->
-<section>
-    <div class="flex-container discription-product">
+    <!-- qoutation-section: START -->
+    <section>
+<div class="flex-container discription-product">
     <div class="main-product-p">
         <!--<div class="empty-area"></div>-->
         <div class=" container custom-container product-text">
@@ -542,10 +543,9 @@
     </div>
 </div>
 </section>
-    <!--qoutation-section:END-->
+    <!-- qoutation-section: END -->
 
-
-<!-- subscribe-section:START -->
+    <!-- subscribe section: START -->
 <section class="subscribe-section">
     <div class="container custom-container">
         <div class="position-end">
@@ -580,9 +580,9 @@
         </div>
     </div>
 </section>
-    <!-- subscribe-section:END -->
+    <!-- subscribe section: END -->
 
-    <!-- footer-area:START -->
+<!-- footer-area: START -->
 <section class=" foot-area">
     <div class="container ">
         <div class="main-container">
@@ -670,8 +670,7 @@
         </div>
     </div>
 </section>
-    <!-- footer-area:END -->
-
+<!-- footer-area: END -->
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/tether.min.js"></script>
